# ompi-mutual-friends

./: .travis.yml  CMakeLists.txt  README.md  common.h  main.cpp  memcached.cpp  memcached.h  mfriends.cpp  mfriends.h
mrmpi/mpistubs/: mpi.h
mrmpi/oink/: blockmacros.h  cc_find.h  cc_stats.h  command.h  degree.h  degree_stats.h  degree_weight.h  edge_upper.h  error.h  histo.h  input.h  library.h  luby_find.h  map_rmat_generate.h  memory.h  mrmpi.h  neigh_tri.h  neighbor.h  object.h  oink.h  pagerank.h  pointers.h  random_mars.h  rmat.h  rmat2.h  sssp.h  tri_find.h  typedefs.h  universe.h  variable.h  vertex_extract.h  wordfreq.h
mrmpi/src/: cmapreduce.h  error.h  hash.h  irregular.h  keymultivalue.h  keyvalue.h  mapreduce.h  memory.h  mpi.c  mrtype.h  spool.h
mrmpi/src/Obj_linux/: cmapreduce.d  keyvalue.d  spool.d
mrmpi/src/Obj_mpicc/: error.d  hash.d  irregular.d  keymultivalue.d  mapreduce.d  memory.d
